# CEIA19_MLOPS1

./: .env  .gitignore  0-Base.ipynb  1-EDA.ipynb  2-Modelling.ipynb  NOTA_Martín.md  README.md  cleanup.sh  docker-compose.yaml  experiment_mlops_mlflow.ipynb  pyproject.toml
airflow/dags/: etl_process.py  retrain_hp_search.py  retrain_the_model.py
airflow/secrets/: variables.yaml
scripts/: airflow-init.sh  create_buckets.sh
testing/: etl.ipynb  hp_search.ipynb
